fixtures/traces/05-py-syntaxerror-import.txt
Traceback (most recent call last):
  File "/home/dev/app/s05_syntaxerror_import.py", line 3, in <module>
    import bad_syntax  # noqa: F401
    ^^^^^^^^^^^^^^^^^
  File "/home/dev/app/bad_syntax.py", line 1
    def apply_discount(order, :
                              ^
SyntaxError: invalid syntax
